Projeto desenvolvido com HTML e CSS

--- a/lojas.html
+++ b/lojas.html
@@ -4,108 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>Nossas lojas - Full Stack Eletro</title>
 </head>
 
 <body>
     <!-- Inicio Menu-->
-    <table width="100%" bgcolor="red">
-        <tr>
-            <td align="center" width="25%">
-                <a href="./index.html"><img width="100px" src="./img/Full Stack logo.png" alt="Logo"></a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./produtos.html">
-                    <font face="Arial" color="white">Produto</font>
-                </a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./lojas.html">
-                    <font face="Arial" color="white">Nossas Lojas</font>
-                </a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./fale_conosco.html">
-                    <font face="Arial" color="white">Fale conosco</font>
-                </a>
-            </td>
-        </tr>
-    </table>
+    <nav class="menu">
+        <a class="logo" href="./index.html"></a>
+        <a href="./produtos.html">Nossos Produtos</a>
+        <a href="./lojas.html">Nossas Lojas</a>
+        <a href="./fale_conosco.html">Fale conosco</a>
+    </nav>
     <!-- Final Menu-->
-    <h2>Nossas lojas</h2>
+
+    <header>
+        <h1>Nossas lojas</h1>
+    </header>
     <hr>
-    <table border="0" width="100%" cellpadding="20">
-        <tr>
-            <td width="33%">
-                <h3>
-                    <font face="Arial">Rio de Janeiro</font>
-                </h3>
-                <p>
-                    <font face="Arial">Avenida Presidente Vargas, 5000</font>
-                </p>
-                <p>
-                    <font face="Arial">10 &ordm; andar</font>
-                </p>
-                <p>
-                    <font face="Arial">Centro</font>
-                </p>
-                <p>
-                    <font face="Arial">(21) 3333-3333</font>
-                </p>
-            </td>
 
-            <td width="33%">
-                <h3>
-                    <font face="Arial">São Paulo</font>
-                </h3>
-                <p>
-                    <font face="Arial">Avenida Paulista, 985</font>
-                </p>
-                <p>
-                    <font face="Arial">3 &ordm; andar</font>
-                </p>
-                <p>
-                    <font face="Arial">Jardins</font>
-                </p>
-                <p>
-                    <font face="Arial">(11) 4444-4444</font>
-                </p>
-            </td>
+    <section class="lojas">
+        <div class="box_lojas">
+            <h3>Rio de Janeiro</h3>
+            <p>Avenida Presidente Vargas, 5000</p>
+            <p>10 &ordm; andar</p>
+            <p>Centro</p>
+            <p>(21) 3333-3333</p>
+        </div>
+        <div class="box_lojas">
+            <h3>São Paulo</h3>
+            <p>Avenida Paulista, 985</p>
+            <p>3 &ordm; andar</p>
+            <p>Jardins</p>
+            <p>(11) 4444-4444</p>
+        </div>
+        <div class="box_lojas">
+            <h3>Santa Catarina</h3>
+            <p>Rua Major &Aacute;vila, 370</p>
+            <p>Vila Mariana</p>
+            <p>(47) 5555-5555</p>
+        </div>
+    </section>
+    <br><br>
 
-            <td width="33%">
-
-                <h3>
-                    <font face="Arial">Santa Catarina</font>
-                </h3>
-                <p>
-                    <font face="Arial">Rua Major &Aacute;vila, 370</font>
-                </p>
-                <p>
-                    <font face="Arial">Vila Mariana</font>
-                </p>
-                <p>
-                    <font face="Arial">(47) 5555-5555</font>
-                </p>
-
-            </td>
-
-        </tr>
-    </table>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <center>
-        <span>
-            <p><font face="Arial" color="red"><b>Formas de pagamento:</b></font></p>
-            <img width="300" src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
-        </span>
-    </center>
-    <center>
-        <font face="Arial" size="2">&copy; Recode Pro</font>
-    </center>
+    <footer id="rodape">
+        <p id="formas_pagamento">Formas de pagamento:</p>
+        <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
+        <p>&copy; Recode Pro</p>
+    </footer>
 </body>
 
 </html>
