--- a/fale_conosco.html
+++ b/fale_conosco.html
@@ -4,69 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Full Stack Eletro</title>
+    <link rel="stylesheet" href="./css/estilo.css">
+    <title>Fale Conosco - Full Stack Eletro</title>
 </head>
 
 <body>
     <!-- Inicio Menu-->
-    <table width="100%" bgcolor="red">
-        <tr>
-            <td align="center" width="25%">
-                <a href="./index.html"><img width="100px" src="./img/Full Stack logo.png" alt="Logo"></a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./produtos.html">
-                    <font face="Arial" color="white">Produto</font>
-                </a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./lojas.html">
-                    <font face="Arial" color="white">Nossas Lojas</font>
-                </a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./fale_conosco.html">
-                    <font face="Arial" color="white">Fale conosco</font>
-                </a>
-            </td>
-        </tr>
-    </table>
+    <nav class="menu">
+        <a class="logo" href="./index.html"></a>
+        <a href="./produtos.html">Nossos Produtos</a>
+        <a href="./lojas.html">Nossas Lojas</a>
+        <a href="./fale_conosco.html">Fale Conosco</a>
+    </nav>
     <!-- Final Menu-->
-    <h2>Contato</h2>
+    <header>
+        <h1>Fale conosco</h1>
+    </header>
     <hr>
-    <table border=0 width="100%" cellpadding="20">
-        <tr>
-            <td width="50%" align="center">
-                <img src="./img/email.jpg" width="40px">
-                <font face="Arial" size="4">contato@fullstackeletro.com</font>
-            </td>
-            <td width="50%" align="center">
-                <img width="50px" src="./img/whatsapp.png" width="80px">
-                <font face="Arial" size="4">(11) 99999-99999</font>
-            </td>
-        </tr>
-    </table>
-    <form action="POST">
-        <h4>Nome: </h4>
-        <input type="text" style="width: 400px;">
-        <h4>Mensagem: </h4>
-        <textarea style="width: 400px;"></textarea><br/>
-        <input type="submit" value="Enviar">
-    </form>
-    <br/>
-    <br/>
-    <br/>
 
+    <section class="fale_conosco">
+        <div class="box_fale_conosco">
+            <img id="email" src="./img/email.jpg">
+            <p class="descricao">contato@fullstackeletro.com</p>
+        </div>
 
-    <center>
-        <span>
-            <p><font face="Arial" color="red"><b>Formas de pagamento:</b></font></p>
-            <img width="300" src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
-        </span>
-    </center>
-    <center>
-        <font face="Arial" size="2">&copy; Recode Pro</font>
-    </center>
+        <div class="box_fale_conosco">
+            <img id="whats" src="./img/whatsapp.png">
+            <p class="descricao">(11) 99999-99999</p>
+        </div>
+
+    </section>
+    <div class="formulario">
+        <form>
+            <h4>Nome </h4>
+            <input type="text" style="width: 400px;" placeholder="Digite seu Nome">
+            <h4>Mensagem </h4>
+            <textarea style="width: 400px;" placeholder="Digite uma mensagem"></textarea>
+            <br/><br/>
+            <input id="button" type="submit" value="Enviar">
+        </form>
+    </div>
+    <br><br>
+    <footer id="rodape">
+        <p id="formas_pagamento">Formas de pagamento:</p>
+        <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
+        <p>&copy; Recode Pro</p>
+    </footer>
 </body>
 
 </html>
