--- a/index.html
+++ b/index.html
@@ -1,56 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>Full Stack Eletro</title>
 </head>
 
 <body>
     <!-- Inicio Menu-->
-    <table width="100%" bgcolor="red">
-        <tr>
-            <td align="center" width="25%">
-                <a href="./index.html"><img width="100px" src="./img/Full Stack logo.png" alt="Full Stack Eletro"></a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./produtos.html">
-                    <font face="Arial" color="white">Produtos</font>
-                </a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./lojas.html">
-                    <font face="Arial" color="white">Nossas Lojas</font>
-                </a>
-            </td>
-            <td align="center" width="25%">
-                <a href="./fale_conosco.html">
-                    <font face="Arial" color="white">Fale conosco</font>
-                </a>
-            </td>
-        </tr>
-    </table>
+    <nav class="menu">
+        <a class="logo" href="./index.html"></a>
+        <a href="./produtos.html">Nossos Produtos</a>
+        <a href="./lojas.html">Nossas Lojas</a>
+        <a href="./fale_conosco.html">Fale Conosco</a>
+    </nav>
     <!-- Final Menu-->
-    <h1>
-        <font face="Arial">Seja Bem vindo(a)!!!</font>
-    </h1>
-    <p>Aqui em nossa loja,<em>Programadores tem desconto!</em>nos produtos para sua casa!</p>
-    <br/><br/><br/>
-    <br/><br/><br/>
-    <br/><br/><br/>
-    <br/><br/><br/>
-    <br/><br/><br/>
-    <br/><br/>
-    <center>
-        <span>
-            <p><font face="Arial" color="red"><b>Formas de pagamento:</b></font></p>
-            <img width="300" src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
-        </span>
-    </center>
-    <center>
-        <font face="Arial" size="2">&copy; Recode Pro</font>
-    </center>
+
+    <main>
+        <h1>Seja Bem vindo(a)!!!</h1>
+        <p>Aqui em nossa loja,<em>Programadores tem desconto!</em>nos produtos para sua casa!</p>
+    </main>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <footer id="rodape">
+        <p id="formas_pagamento">Formas de pagamento:</p>
+        <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
+        <p>&copy; Recode Pro</p>
+    </footer>
 </body>
 
 </html>
