Projeto desenvolvido com HTML, CSS e JAVASCRIPT

--- a/fale_conosco.html
+++ b/fale_conosco.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilo.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Fale Conosco - Full Stack Eletro</title>
 </head>
 
@@ -20,7 +20,7 @@
     <header>
         <h1>Fale conosco</h1>
     </header>
-    <hr>
+    <hr/>
 
     <section class="fale_conosco">
         <div class="box_fale_conosco">
@@ -44,11 +44,11 @@
             <input id="button" type="submit" value="Enviar">
         </form>
     </div>
-    <br><br>
+
     <footer id="rodape">
         <p id="formas_pagamento">Formas de pagamento:</p>
         <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
-        <p>&copy; Recode Pro</p>
+        <p>&copy; Recode Pro 2020</p>
     </footer>
 </body>
 
