--- a/lojas.html
+++ b/lojas.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilo.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Nossas lojas - Full Stack Eletro</title>
 </head>
 
@@ -21,7 +21,7 @@
     <header>
         <h1>Nossas lojas</h1>
     </header>
-    <hr>
+    <hr/>
 
     <section class="lojas">
         <div class="box_lojas">
@@ -45,12 +45,12 @@
             <p>(47) 5555-5555</p>
         </div>
     </section>
-    <br><br>
+    <br/><br/>
 
     <footer id="rodape">
         <p id="formas_pagamento">Formas de pagamento:</p>
-        <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
-        <p>&copy; Recode Pro</p>
+        <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento" />
+        <p>&copy; Recode Pro 2020</p>
     </footer>
 </body>
 
