--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilo.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Full Stack Eletro</title>
 </head>
 
@@ -22,15 +22,11 @@
         <h1>Seja Bem vindo(a)!!!</h1>
         <p>Aqui em nossa loja,<em>Programadores tem desconto!</em>nos produtos para sua casa!</p>
     </main>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
-    <br><br><br>
+
     <footer id="rodape">
         <p id="formas_pagamento">Formas de pagamento:</p>
-        <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento">
-        <p>&copy; Recode Pro</p>
+        <img src="./img/pagamentos-bandeiras-01.png" alt="Formas de Pagamento" />
+        <p>&copy; Recode Pro 2020</p>
     </footer>
 </body>
 
